# keenable-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  dist-workspace.toml
.github/workflows/: release.yml
assets/: login_failure.html  login_success.html
src/: api.rs  config.rs  constants.rs  daemon.rs  main.rs  ui.rs  update.rs
src/commands/: configure.rs  configure_mcp.rs  configure_webql.rs  ide.rs  keys.rs  login.rs  mcp_common.rs  mcp_stdio.rs  mod.rs  reset.rs  reset_webql.rs  search.rs  setup.rs
