[package]
name = "keenable-cli"
version = "0.1.4"
edition = "2024"
description = "Keenable CLI — authenticate, manage API keys, configure MCP, and search the web"
authors = ["grigorevp <grigoryev.pete@gmail.com>"]
repository = "https://github.com/keenableai/keenable-cli"
homepage = "https://keenable.ai"
publish = false

[package.metadata.dist]
dist = true

[[bin]]
name = "keenable"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5"
colored = "2"
dialoguer = "0.11"
chrono = "0.4"
serde_yaml = "0.9"
toml = "1.1.2"
terminal_size = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
